<resources>
    <string name="facebook_app_id" translatable="false">540607590030443</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb540607590030443</string>
    <string name="app_name">Cezma</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="following">Following</string>
    <string name="profile_page">profile Page</string>
    <string name="upgradeAccount">Upgrade Account</string>
    <string name="payment">Payment</string>
    <string name="contactUs">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="email">Email</string>
    <string name="send_message">send Message</string>
    <string name="typeMessage">Type your message</string>
    <string name="followingShop">Stores</string>
    <string name="login_email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="or">OR</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUpHaveAccount">Already have account, </string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password_2">FORGOT YOUR PASSWORD?</string>
    <string name="we_just_need_your_registered_email_to_send_your_reset_password">We just need your registered email to send your reset password</string>
    <string name="rest_password">Rest Password</string>
    <string name="back">Back</string>
    <string name="Governorate">Governorate</string>
    <string name="editProfile">Edit Profile</string>
    <string name="attributes">Attributes</string>
    <string name="production_date">Production Date</string>
    <string name="model">Model</string>
    <string name="description">Description</string>
    <string name="addShop">Add Shop</string>
    <string name="shopName">Shop Name</string>
    <string name="addShopDescription">Type 3000 character</string>
    <string name="addCover">Add Cover</string>
    <string name="addProfile">Add Profile</string>
    <string name="documentingTheShop">Documenting The Shop</string>
    <string name="you_can_upload_documents_to_your_shop">You can upload documents your shop.</string>
    <string name="add_shop">Add Shop</string>
    <string name="addProduct">Add Product</string>
    <string name="productName">Product Name</string>
    <string name="addProductDescription">Type 3000 character</string>
    <string name="City">City</string>
    <string name="Category">Category</string>
    <string name="SubCategory">SubCategory</string>
    <string name="addVideo">Add Video</string>
    <string name="addImage">Add Image</string>
    <string name="add_Product">Add Product</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="verification_code_has_been_sent_to_you_on_your_mobile_number">verification code has been sent to you on your mobile number</string>
    <string name="enter_the_code_you_received">Enter the code you received</string>
    <string name="didn_t_receive_verification_code">Didn\'t receive verification code?</string>
    <string name="search_your_product">Search your product</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="terms">Terms of service</string>
    <string name="privacy">Privacy Policy</string>
    <string name="aboutUs">About us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="say_something">Say something</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="how_to_open_your_shop">How to open your shop</string>
    <string name="logout">Logout</string>
    <string name="last_added">Last added</string>
    <string name="submit">Submit</string>
    <string name="resend_in">Resend in </string>
    <string name="second"> sec</string>
    <string name="resend">Resend</string>
    <string name="generalError">Some Error Happened</string>
    <string name="emptyList">No Data</string>
    <string name="category">Category</string>
    <string name="retry">Retry</string>
    <string name="emptyEmail">Email Field Empty</string>
    <string name="emptyPassword">Password Field Empty</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="loginSuccess">Login Completed Successfully</string>
    <string name="noConnection">No Internet Connection!</string>
    <string name="logOut">LogOut</string>
    <string name="login">Login</string>
    <string name="NewAccount">SignUp / SingIn</string>
    <string name="you_must_login">You must login first!</string>
    <string name="logoutSuccess">Logout Completed Successfully</string>
    <string name="fav">Succssfully Added to Favourites.</string>
    <string name="notFav">Succssfully Removed to Favourites.</string>
    <string name="emptyFavouriteList">You Have No Favourites.</string>
    <string name="phoneCode">Phone Code</string>
    <string name="State">State</string>
    <string name="Country">Country</string>
    <string name="oldPassword">Old Password</string>
    <string name="Gender">Gender</string>
    <string name="newPassword">New Password</string>
    <string name="enterNewPassword">Enter new password here</string>
    <string name="enterOldPassword">Enter old password here</string>
    <string name="emptyField">Empty Field</string>
    <string name="requestPermission">Requesting permission</string>
    <string name="errorSelectImage">Error Select Image</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="countryCodeValue">20</string>
    <string name="fullName">Full Name</string>
    <string name="VerifiedUser">Verified Customer</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="sureToReportAd">Are you sure you want to report this ad?</string>
    <string name="adOfferMessage">Enter your ad offer here</string>
    <string name="adOffer">Make Offer</string>
    <string name="loading">Loading...</string>
    <string name="load_failed">Load Failed.</string>
    <string name="load_end">No More Data</string>
    <string name="offer">offer</string>
    <string name="offers">Offers</string>
    <string name="accepted">Accepted</string>
    <string name="writeComment">Write Comment</string>
    <string name="hint_leave_review">write comment...</string>
    <string name="label_confirm_review">Send Comment</string>
    <string name="error_star_count_zero">Choose at least 1 Stars</string>
    <string name="label_write_review_message">Write your comment first</string>
    <string name="Verify_phone">Verify phone number</string>
    <string name="verify">Verify</string>
    <string name="code">Code</string>
    <string name="send_code">Send Code</string>
    <string name="enter_valid_phone">please enter valid phone number</string>
    <string name="invalid_code">This code is invalid</string>
    <string name="enter_code">Please enter verify code</string>
    <string name="please_enter_it_below">please enter it below</string>
    <string name="adComment">Add Your Comment</string>
    <string name="comments">Comments</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgradeAd">Upgrade Ad</string>
    <string name="featured">Featured</string>
    <string name="newFilter">New</string>
    <string name="used">Used</string>
    <string name="high_price">High Price</string>
    <string name="low_price">Low Price</string>
    <string name="choose_filter">Choose an filter</string>
    <string name="filters">Filters</string>


    <string-array name="gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="country_array">
        <item>Egypt</item>
        <item>US</item>
        <item>UK</item>
    </string-array>

    <string-array name="gover_array">
        <item>Tanta</item>
        <item>Alex</item>
        <item>Cairo</item>
    </string-array>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="emptyCommentsList">No comments for this ad.</string>
    <string name="shortDesc">Short description</string>
    <string name="longDesc">Long Description</string>
    <string name="userName">UserName</string>
    <string name="no_subcategories">No SubCategory Found</string>
    <string name="logoImageSelected">Profile Image Selected</string>
    <string name="coverImageSelected">Cover Image Selected</string>
    <string name="select_category">Make Sure Yo Choose your Shop Categories</string>
    <string name="select_shop_images">Make Sure to choose store images</string>
    <string name="upgradeAccountToAddShop">You have to upgrade your account to create shop.</string>
    <string name="editShop">Edit Shop</string>
    <string name="saveShop">Save Shop</string>
    <string name="editMyShop">Edit My Shop</string>
    <string name="from">From</string>
    <string name="to">To</string>

</resources>
