<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    tools:context=".ui.mainActivity.profile.editProfile.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/dataCl"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/editProfileBackImgv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/editProfileTv" />

            <TextView
                android:id="@+id/editProfileTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/editProfile"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profileSaveImgv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:padding="8dp"
                android:src="@drawable/tick"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/editProfileTv" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileUserImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/test_user_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editProfileTv" />

             </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstName"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/firstName"
                android:background="@drawable/auth_bg_rounded"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                android:drawablePadding="12dp"
                android:inputType="text"
                tools:text="Mahmoud"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/lastName"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/auth_bg_rounded"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                android:drawablePadding="12dp"
                android:id="@+id/lastName"
                android:inputType="text"
                tools:text="Ashraf"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/phone"
                android:textColor="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@drawable/auth_bg_rounded"
                android:inputType="numberDecimal"
                tools:text="02"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/code"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/auth_bg_rounded"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:drawablePadding="12dp"
                android:inputType="phone"
                tools:text="01019744661"
                android:id="@+id/phone"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/auth_bg_rounded"
                android:drawableStart="@drawable/email"
                android:drawablePadding="12dp"
                android:inputType="textEmailAddress"
                tools:text="mahmoud@gmail.com"
                android:id="@+id/email"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/oldPassword"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/auth_bg_rounded"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:inputType="textPassword"
                android:id="@+id/oldPassword"
                android:gravity="end|center"
                tools:text="mahmoud@gmail.com"
                android:hint="@string/enterOldPassword"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/newPassword"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/auth_bg_rounded"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="12dp"
                android:inputType="textPassword"
                tools:text="mahmoud@gmail.com"
                android:gravity="end|center"
                android:layout_gravity="center"
                android:hint="@string/enterNewPassword"
                android:id="@+id/newPassword"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/Country"
                android:textColor="@android:color/darker_gray" />

            <Spinner
                android:id="@+id/countrySpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner_bg"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/State"
                android:textColor="@android:color/darker_gray" />

            <Spinner
                android:id="@+id/stateSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner_bg"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/City"
                android:textColor="@android:color/darker_gray" />

            <Spinner
                android:id="@+id/citySpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/spinner_bg"
                android:spinnerMode="dialog" />

        </LinearLayout>
    </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorScrim"
        android:elevation="2dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:contentPadding="8dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>